refactored AdminController for handling responses in presentation layer